src/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-traces-quarkus
  namespace: default
  labels:
    app: api-traces-quarkus
spec:
  type: LoadBalancer
  selector:
    app: api-traces-quarkus
  ports:
  - name: http
    port: 8080
    targetPort: 8080
